--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-search-box": "^3.0.0",
+    "recharts": "^2.10.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
